--- a/Homework 2/about_us/src/App.css
+++ b/Homework 2/about_us/src/App.css
@@ -147,12 +147,13 @@ a:hover, a:active {
     font-size: 18px;
     letter-spacing: 0;
     line-height: 22px;
-    margin: 0 0 5px;
+    margin: 10px 0 5px;
 }
 
 
 .feature .feature-box .feature-content {
     padding-left: 0;
+    margin: 10px;
 }
 .feature .feature-box .feature-content h4 {
     color: #0f0f0f;
